--- a/style.css
+++ b/style.css
@@ -54,42 +54,45 @@ a{
     flex-direction: row
 }
 
-.appstore{
+.phone{
     margin: 0 auto;
     padding-top: 10em;
     padding-bottom: 5rem;
     display: flex;
     max-width: 920px;
-    gap: 1em;
     flex-wrap: wrap;
     justify-content: space-between;
+    flex-direction: column;
 }
 
 .app{
-    background-color: rgb(181, 221, 255);
-    width: 18rem;
+    padding: 1rem;
+    width: 100%;
     height: 18rem;
     display: flex;
     border-radius: 1rem;
 }
 
-.demoapp{
+.box{
+    width: 100%;
+    min-height: 100%;
     background-color: rgb(181, 221, 255);
-    width: 38rem;
-    height: 18rem;
-    display: flex;
     border-radius: 1rem;
-    justify-content: space-around;
+}
+
+.padd .box{
+    display: flex;
+    flex-direction: column;
+}
+
+.padd{
+    padding: 1rem;
 }
 
 .insidedemo{
-    width: 16rem;
-    height: 18rem;
-    display: flex;
+    width: 100%;
     padding: 1rem;
-    background-color: red;
 }
-
 .strategic{
     margin: 0 auto;
     padding: 3rem 0;
@@ -99,9 +102,17 @@ a{
 }
 
 .planning{
-    height: 24rem;
-    width: 20rem;
-    background-color: white;
+    padding: 1rem;
+    width: 100%;
+    height: 18rem;
+    display: flex;
+    border-radius: 1rem;
+}
+
+.develop{
+    width: 100%;
+    min-height: 100%;
+    background-color: rgb(255, 255, 255);
     border-radius: 1rem;
 }
 
@@ -122,24 +133,25 @@ a{
 }
 
 .partner{
-    max-width: 920px;
-    background-color: rgb(151, 146, 228);
-    height: 10rem;
+    padding: 1rem;
+    width: 100%;
+    height: 12rem;
     display: flex;
     border-radius: 1rem;
-    margin-top: 2rem;
+    margin-bottom: 3%
 }
 
+
 .idpartner {
-    flex-basis: 20%;
+    flex-basis: calc(100% / 4);
     background-color: blue;
-    border-radius: 1rem;
+    border-radius: 1rem 0rem 0rem 1rem;
 }
 
 .datipartner{
-    border-radius: 1rem;
-    flex-basis: 80%;
-    background-color: red
+    flex-basis: calc(100% / 4 * 3);
+    background-color: red;
+    border-radius: 0rem 1rem 1rem 0rem;
 }
 
 .benefits{
