--- a/style.css
+++ b/style.css
@@ -67,7 +67,6 @@ a{
 
 .app{
     padding: 1rem;
-    width: 100%;
     height: 18rem;
     display: flex;
     border-radius: 1rem;
@@ -167,17 +166,21 @@ a{
     padding-bottom: 5rem;
     display: flex;
     max-width: 920px;
-    gap: 1em;
     flex-wrap: wrap;
     justify-content: space-between;
 }
 
 .card{
-    background-color: white;
-    margin-bottom: 1rem;
-    width: 18rem;
-    height: 25rem;
+    padding: 1rem;
+    height: 18rem;
     display: flex;
+    border-radius: 1rem;
+}
+
+.boxcard{
+    width: 100%;
+    min-height: 100%;
+    background-color: rgb(255, 255, 255);
     border-radius: 1rem;
 }
 
